--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
      background-color: lightblue;
 
 }
-.sideBar_Nav{
+\.sideBar_Nav{
     height: 100%;
     width: 0;
     background-color: rgb(236, 130, 130);
